[workspace]
members = [
  "crates/soroban-test-helpers",
  "crates/soroban-test-helpers-usage",
  "crates/soroban-rs"
]

default-members = ["crates/soroban-test-helpers"]

# Explicitly set the resolver to version 2, which is the default for packages
# with edition >= 2021.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
soroban-sdk = "22.0.7"
tokio = { version = "1.43.0", features = ["full"] }
stellar-rpc-client = "22.0.0"
stellar-xdr = "22.1.0"
stellar-strkey = "0.0.11"
ed25519-dalek = "2.1.1"
sha2 = "0.10.8"
rand = "0.9.0"
hex = "0.4.3"

# members
soroban-test-helpers = { path = "crates/soroban-test-helpers" }