[workspace]
resolver = "3"
members = [
  "crates/soroban-test-helpers",
  "crates/soroban-test-helpers-usage",
  "crates/soroban-rs"
]
default-members = ["crates/soroban-test-helpers"]

[workspace.package]
edition = "2024"
rust-version = "1.85.0" #MSRV

[workspace.dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
soroban-sdk = "22.0.7"
tokio = { version = "1.43.0", features = ["full"] }
stellar-rpc-client = "22.0.0"
stellar-xdr = "22.1.0"
stellar-strkey = "0.0.11"
ed25519-dalek = "2.1.1"
sha2 = "0.10.8"
rand = "0.9.0"
hex = "0.4.3"
dotenv = "0.15.0"

# members
soroban-test-helpers = { path = "crates/soroban-test-helpers" }