[package]
name = "soroban-helpers-example"
version = "0.1.0"
edition.workspace = true

# List of soroban scripts
[[example]]
name = "deploy"
path = "src/scripts/deploy.rs"

[[example]]
name = "send"
path = "src/scripts/send.rs"

[dependencies]
soroban-test-helpers.workspace = true
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

## scripts dependencies.
soroban-rs.workspace = true
dotenv.workspace = true
ed25519-dalek.workspace = true
stellar-strkey.workspace = true
tokio.workspace = true
soroban-contract-client.workspace = true
