[package]
name = "soroban-rs-macros"
version = "0.2.4"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
readme = "README.md"
categories = ["development-tools", "wasm"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
