[package]
name = "soroban-rs"
version = "0.2.6"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme = "README.md"
categories = ["development-tools"]

[[example]]
name = "deploy_and_invoke"
path = "examples/deploy_and_invoke.rs"

[[example]]
name = "create_multisig"
path = "examples/create_multisig.rs"

[[example]]
name = "invoke_contract"
path = "examples/invoke_contract.rs"

[dependencies]
tokio.workspace = true
stellar-rpc-client.workspace = true
stellar-xdr.workspace = true
stellar-strkey.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
async-trait.workspace = true

# soroban-rs-macros workspace dependency
soroban-rs-macros.workspace = true

[dev-dependencies]
# example dependency
dotenv.workspace = true
tempfile.workspace = true